fix: spacing between legend icons and circular marker symbols

--- a/resources/legend.less
+++ b/resources/legend.less
@@ -13,6 +13,10 @@
         box-shadow: 0 0 1px 1px #0002;
     }
 
+    .oo-ui-fieldLayout-header > img + .datamap-legend-circle {
+        padding-left: 6px;
+    }
+
     .oo-ui-buttonGroupWidget {
         display: block;
     }
